# shesheer-cmo-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  STACK.md  main.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 8319d9b07eda_initial_memory_layer_schema.py
data/: shesheer_cmo.db
data/annotations/: ariel_cultural_tension_001.json  byjus_collapse_001.json  byjus_rise_001.json  cred_delta4_001.json  jio_distribution_001.json  kan_khajura_constraint_001.json  nirma_pricing_001.json  nykaa_trust_001.json  pw_trust_first_001.json  zerodha_plg_001.json
data/chromadb/: chroma.sqlite3
data/prompts/: PROMPT_CHANGELOG.md  indian_cmo_persona.txt
data/sources/: master_library.yaml  web_sources.yaml  youtube_sources.yaml
scripts/: annotate.py  debug_yaml.py  ingest_master_library.py  ingest_pdf_batch.py  ingest_web_batch.py  ingest_youtube_batch.py  run_manual_eval.py  test_ingest.py  test_rag.py  test_reasoning.py  update_context.py
src/: agent.py  config.py
src/api/: health.py  main.py
src/core/: challenger.py  decision_tracker.py  orchestrator.py  reasoning_engine.py  response_formatter.py  system_prompt.py
src/ingestion/: pdf_processor.py  social_scheduler.py  web_scraper.py  youtube_ingester.py
src/interface/: streamlit_app.py  telegram_bot.py
src/knowledge/: chroma_client.py  chunker.py  embedder.py  source_registry.py
src/memory/: context_manager.py  (+2 more)
tests/: test_questions.json  test_results.md  test_retrieval.py  test_system.py
(+11 files in other folders)
