[project]
name = "shesheer-cmo-agent"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # Intelligence
    "google-genai>=0.3.0",

    # Vector Database
    "chromadb>=0.5.0",

    # Embeddings (local, free)
    "sentence-transformers>=3.0.0",

    # Audio Transcription (local, free)
    "faster-whisper>=1.0.0",

    # YouTube & Web Ingestion
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "markdownify>=0.12.0",

    # PDF Processing
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",

    # Backend
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-telegram-bot>=21.0",
    "streamlit>=1.36.0",

    # Database & Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "diskcache>=5.6.0",

    # Data & Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",

    # Utilities
    "tenacity>=8.4.0",
    "loguru>=0.7.0",
    "ruff>=0.4.0",
    "apscheduler>=3.10.0",
    "langdetect>=1.0.9",
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]
